yair-io/tests/lit/mod/missing_opening_brace.ya
// RUN: @yair_as @file -o "@first_tempfile" --color never 2>&1 || echo 0

mod "😀"

// CHECK: error: Expected '{'
